--- a/framework.html
+++ b/framework.html
@@ -146,8 +146,8 @@ legal systems and capacity to address environmental and social risks.</p>
     </ul></li>
 <li>Economic Environment
     <ul>
-    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=IC.BUS.EASE.XQ&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Ease of doing business index (1=most business-friendly regulations)</a>
-    - <strong>Note:</strong> Doing Business has been discontinued as of 9/16/2021. <a href="bit.ly/3CLCbme">More information here</a>.
+    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=IC.BUS.EASE.XQ&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Ease of doing business index (1=most business-friendly regulations)</a><br/>
+    <strong>Note:</strong> Doing Business has been discontinued as of 9/16/2021. <a href="bit.ly/3CLCbme">More information here</a>.
     </li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=NY.GDP.MKTP.KD.ZG&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">GDP growth (annual %)</a></li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=IT.NET.USER.ZS&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Individuals using the Internet (% of population)</a></li>
